feat: OAuth2 Password Bearer auth flow & Scopes
* Implement Makefile build scripts for binaries and documentation.
* Implement OAuth2 Password Bearer authentication flow.
* Implement OAuth2 Scopes based access control.
* Confine account and user creation to initialization.
